# vudeploy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  vusvc.sln
src/: lobby.rs  main.rs  rcon.rs  server.rs  tests.rs  vu.rs
vusvc/: Dockerfile  Program.cs  Startup.cs  appsettings.json  players.json  vusvc.csproj
vusvc.tests/: PlayerTests.cs  RconTests.cs  UsabilityTests.cs  Util.cs  vusvc.tests.csproj
vusvc/Controllers/: LobbyController.cs  MatchController.cs  PlayerController.cs  ServerController.cs  StatsController.cs
vusvc/Data/: ApplicationDbContext.cs  Match.cs  Player.cs  PlayerLobby.cs  PlayerMatchStats.cs  Server.cs
vusvc/Data/Db/: DbSchema.sql  players.json
vusvc/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  ApplicationDbContextModelSnapshot.cs
vusvc/Extensions/: QueueExt.cs  StringExt.cs
vusvc/Instances/: LEAVE_DIR_EMPTY.txt
vusvc/Instances/Templates/: PLACE_SERVER_KEYS_HERE.txt
vusvc/Managers/: ILobbyManager.cs  IMatchManager.cs  IPlayerManager.cs  IServerManager.cs  LobbyManager.cs  MatchManager.cs  PlayerManager.cs  RconManager.cs  ServerManager.cs
vusvc/Models/: Lobby.cs  Match.cs  Player.cs
vusvc/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs  Servers.cshtml  Servers.cshtml.cs  _ViewImports.cshtml
vusvc/Pages/Shared/: _Layout.cshtml
vusvc/Properties/: launchSettings.json
vusvc/Views/Player/: Index.cshtml
vusvc/Views/Server/: GetServerList.cshtml  Index.cshtml
